--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,14 @@
   font-family: 'Quicksand', sans-serif;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
 .container {
   width: 100%;
   height:100vh;
@@ -16,12 +24,10 @@
 }
 
 .box {
-  width: 400px;
-  height: 700px;
+  width: 250px;
+  height: 450px;
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(2px);
-  border-left:1px solid rgba(51, 51, 51, 0.5);
-  border-top:1px solid rgba(58, 58, 58, 0.5);
 }
 
 .calc {
@@ -30,8 +36,8 @@
 }
 
 .calc .display {
-  width: 397px;
-  height: 200px;
+  width: calc(100% - 3px);
+  height: 30%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -50,7 +56,6 @@ input:focus{
 .buttons {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-column-gap: 1px;
   text-align: center;
   align-items: center;
   justify-content: center;
@@ -63,17 +68,24 @@ input:focus{
 
 .buttons span {
   place-items: center;
-  width: calc(100px - 4px);
-  height: calc(100px - 2px);
+  width: calc(62.5px);
+  height: calc(63px);
   color: white;
   font-weight: 600;
-
+  user-select: none;
   display: flex;
   justify-content: center;
   align-items: center;
+}
 
-  border-left:1px solid rgba(51, 51, 51, 0.25);
-  border-top:1px solid rgba(58, 58, 58, 0.25);
+.buttons span:hover {
+  background-color: rgb(46, 18, 175);
+}
+
+.buttons span:active {
+  background-color: rgb(54, 4, 255);
+  border-left:0px;
+  border-top:0px;
 }
 
 .btn p {
